# timetable-scheduling

./: CMakeLists.txt  README.md  course.cpp  course.h  instructor.cpp  instructor.h  main.cpp  possible_combination.cpp  possible_combination.h  test1.json  test2.json  test4.json  test6.json  time_slot.cpp  time_slot.h  university.cpp  university.h
tests/: test1.json  test10.json  test2.json  test3.json  test4.json  test5.json  test6.json  test7.json  test8.json  test9.json  test_university.cpp
